# YappyCam

./: .gitignore  .gitmodules  CComPtr.hpp  CMakeLists.txt  Clock_yap.cpp  HISTORY.md  HISTORY.txt  LICENSE.txt  Misc.cpp  Misc.hpp  PicInputDlg.cpp  Plugin.h  Plugin1.cpp  Plugin1.def  PluginFramework.cpp  PluginFramework.h  README.md  README.txt  READMEJP.txt  SaveToDlg.cpp  Sound.cpp  Sound.hpp  SoundInputDlg.cpp  YappyCam.cpp  YappyCam.hpp  YappyCam_res.rc  faces_dlg.cpp  finalize.cpp  hotkeys_dlg.cpp  installer.iss  installer32-msys2.iss  installer64-msys2.iss  installer64-vc.iss  misc.cpp  misc.hpp  multires_dlg.cpp  pic_dlg.cpp  plugins_dlg.cpp  rebuild.sh  resource.h  (+8 more)
.circleci/: config.yml
YappyCam/: CMakeLists.txt  PluginFramework.cpp  YappyCam.cpp  YappyCam.hpp  YappyCam_res.rc  faces_dlg.cpp  hotkeys_dlg.cpp  multires_dlg.cpp  pic_dlg.cpp  plugins_dlg.cpp  resource.h  ring.hpp  save_to_dlg.cpp  sound.cpp  sound.hpp  sound_dlg.cpp
YappyCam/lang/: en_US.rc  ja_JP.rc
finalize/: CMakeLists.txt  finalize.cpp  misc.cpp
include/: Plugin.h  PluginFramework.h  SetDlgItemDouble.h  ccomptr.hpp  color_button.hpp  misc.hpp
lang/: en_US.rc  ja_JP.rc
plugins/: CMakeLists.txt  color_value.h  mregkey.hpp
plugins/Brightness/: Brightness_yap.cpp  Brightness_yap_res.rc  CMakeLists.txt  resource.h
plugins/Brightness/lang/: en_US.rc  ja_JP.rc
plugins/ChromaKey/: CMakeLists.txt  ChromaKey_yap.cpp  ChromaKey_yap_res.rc  resource.h
plugins/ChromaKey/lang/: en_US.rc  ja_JP.rc
plugins/Clock/: CMakeLists.txt  Clock_yap.cpp  Clock_yap_res.rc  resource.h
plugins/Clock/lang/: en_US.rc  ja_JP.rc
plugins/ColorInvert/: CMakeLists.txt  ColorInvert_yap.cpp  ColorInvert_yap_res.rc  resource.h
plugins/ColorInvert/lang/: en_US.rc  ja_JP.rc
plugins/DecoFace/: CMakeLists.txt  DecoFace_yap.cpp  DecoFace_yap_res.rc  resource.h
plugins/DecoFace/lang/: en_US.rc  ja_JP.rc
plugins/DecoFrame/: CMakeLists.txt  DecoFrame_yap.cpp  DecoFrame_yap_res.rc  resource.h
plugins/DecoFrame/lang/: en_US.rc  ja_JP.rc
plugins/FaceDetection/: CMakeLists.txt  FaceDetection_yap.cpp  FaceDetection_yap_res.rc  resource.h
plugins/FaceDetection/lang/: en_US.rc  ja_JP.rc
plugins/GaussianBlur/: CMakeLists.txt  GaussianBlur_yap.cpp  GaussianBlur_yap_res.rc  resource.h
plugins/GaussianBlur/lang/: en_US.rc  ja_JP.rc
plugins/Monochrome/: CMakeLists.txt  Monochrome_yap.cpp  Monochrome_yap_res.rc
plugins/Monochrome/lang/: en_US.rc  ja_JP.rc
plugins/Mosaic/: CMakeLists.txt  Mosaic_yap.cpp  Mosaic_yap_res.rc  resource.h
plugins/Mosaic/lang/: en_US.rc  ja_JP.rc
plugins/Noize/: CMakeLists.txt  Noize_yap.cpp  Noize_yap_res.rc  resource.h
plugins/Noize/lang/: en_US.rc  ja_JP.rc
plugins/Quadruple/: CMakeLists.txt  Quadruple_yap.cpp  Quadruple_yap_res.rc  resource.h
plugins/Quadruple/lang/: en_US.rc  ja_JP.rc
plugins/Quarter/: CMakeLists.txt  Quarter_yap.cpp  Quarter_yap_res.rc  resource.h
plugins/Quarter/lang/: en_US.rc  ja_JP.rc
plugins/Resizing/: CMakeLists.txt  Resizing_yap.cpp  Resizing_yap_res.rc  resource.h
plugins/Resizing/lang/: en_US.rc  ja_JP.rc
plugins/Rotation/: CMakeLists.txt  Rotation_yap.cpp  Rotation_yap_res.rc  resource.h
plugins/Rotation/lang/: en_US.rc  ja_JP.rc
plugins/Sepia/: CMakeLists.txt  Sepia_yap.cpp  Sepia_yap_res.rc  resource.h
plugins/Sepia/lang/: en_US.rc  ja_JP.rc
plugins/Trimming/: CMakeLists.txt  Trimming_yap.cpp  Trimming_yap_res.rc  resource.h
plugins/Trimming/lang/: en_US.rc  ja_JP.rc
plugins/medianBlur/: CMakeLists.txt  medianBlur_yap.cpp  resource.h
plugins/medianBlur/lang/: en_US.rc  ja_JP.rc
silent/: CMakeLists.txt  resource.h  silent.cpp  silent_res.rc
sound2wav/: CMakeLists.txt  sound2wav.cpp
tests/: CMakeLists.txt
tests/diskrate/: CMakeLists.txt  diskrate.cpp
